--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body, html {
   margin: 0;
+  font-family: 'Roboto', Arial;
 }
